# khonliang-reviewer

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/instructions/: review.instructions.md
reviewer/: __init__.py  __main__.py  agent.py  credentials.py  github_client.py  pricing_seed.py  registry.py  selector.py  storage.py
reviewer/config/: __init__.py  prompts.py  repo.py
reviewer/data/: __init__.py  default_pricing.yaml
reviewer/data/prompts/: README.md  __init__.py  fr_rubric.md  milestone_rubric.md  schema_design_checklist.md  spec_rubric.md
reviewer/distill/: __init__.py
reviewer/distill/transforms/: __init__.py  body_mode.py  dedup.py  max_findings.py  severity_filter.py
reviewer/providers/: __init__.py  _prompt.py  claude_cli.py  codex_cli.py  gh_copilot.py  ollama.py
reviewer/rules/: __init__.py  distill.py  policy.py  profile.py
reviewer/skills/: __init__.py  sign_off_trailer.py
reviewer/tools/: __init__.py  benchmark_sweep.py
reviewer/tools/benchmark_data/: __init__.py  bus_lib_pr14.diff
specs/MS-B/: spec.md
specs/MS-C/: spec.md
specs/MS-D/: spec.md
tests/: test_agent_skeleton.py  test_agent_skills.py  test_benchmark_sweep.py  test_config_prompts.py  test_config_repo.py  test_credentials.py  test_github_client.py  test_pricing_seed.py  test_registry.py  test_review_pr.py  test_selector_default_models.py  test_storage.py  test_welcome.py
tests/distill/: test_body_mode.py  test_dedup.py  test_distill_config.py  test_max_findings.py  test_pipeline_shell.py  test_severity_filter.py
tests/providers/: test_claude_cli.py  test_codex_cli.py  test_gh_copilot.py  test_ollama.py  test_prompt_assembly.py
tests/rules/: test_policy.py  test_profile.py
tests/skills/: test_sign_off_trailer.py
