[project]
name = "khonliang-reviewer"
version = "0.3.0"
description = "Bus-native reviewer agent — pluggable review providers, usage accounting, subscription vs API cost comparison"
requires-python = ">=3.11"
dependencies = [
    # TEMPORARY: pinned to fr-reviewer-dfd27582-filtered-count while the lib
    # PR (khonliang-reviewer-lib#4 — UsageEvent.findings_filtered_count +
    # SEVERITY_ORDER/severity_rank) is in review. Revert to `@main` after that
    # PR merges. Without this pin, the reviewer import chain fails on
    # `SEVERITY_ORDER`, `severity_rank`, and `UsageEvent.findings_filtered_count`.
    "khonliang-reviewer-lib @ git+https://github.com/tolldog/khonliang-reviewer-lib.git@fr-reviewer-dfd27582-filtered-count",
    "khonliang-bus-lib",
    "pyyaml>=6.0",
    "openai>=1.40",
    "githubkit>=0.11",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
khonliang-reviewer = "reviewer.agent:main"

[tool.setuptools.packages.find]
include = ["reviewer*"]

[tool.setuptools.package-data]
"reviewer.data" = ["*.yaml"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
