[project]
name = "khonliang-reviewer"
version = "0.3.0"
description = "Bus-native reviewer agent — pluggable review providers, usage accounting, subscription vs API cost comparison"
requires-python = ">=3.11"
dependencies = [
    "khonliang-reviewer-lib @ git+https://github.com/tolldog/khonliang-reviewer-lib.git@main",
    "khonliang-bus-lib>=0.5.0",  # >=0.5.0 for Welcome / WelcomeEntryPoint exports
    "pyyaml>=6.0",
    "openai>=1.40",
    # ``GitHub.__init__`` renamed the ``token`` kwarg to ``auth`` around
    # 0.13; this provider passes ``auth=`` (see reviewer/github_client.py).
    # Bump the floor accordingly so the install fails loudly on stale
    # versions instead of getting a runtime TypeError on first review_pr.
    "githubkit>=0.13",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
khonliang-reviewer = "reviewer.agent:main"

[tool.setuptools.packages.find]
include = ["reviewer*"]

[tool.setuptools.package-data]
"reviewer.data" = ["*.yaml"]
# Bundle the reference diff with installs so
# ``python -m reviewer.tools.benchmark_sweep`` works out-of-the-box
# (without ``--diff <path>``) on the same machine that imports the
# package.
"reviewer.tools.benchmark_data" = ["*.diff"]
# Bundle the artifact-review rubric prompts so the future
# artifact-review pipeline (``fr_reviewer_19c871ab``) can load
# them via ``importlib.resources.files("reviewer.data.prompts")``
# without each consumer repo having to ship its own
# ``.reviewer/prompts/`` first.
"reviewer.data.prompts" = ["*.md"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
